// protoc --gogofaster_out=. msg.proto
syntax = "proto3";
package proto;

message SendMsgReq {
  string sender_id = 1;
  string recv_id = 2;
  string content = 3;
}

message SendMsgResp {
  int64 msg_id = 1;
  int64 timestamp = 2;
}